# OP2-ARM-MOCKUP

./: README.md  install.md
arm_driver/: CHANGELOG.rst  CMakeLists.txt  package.xml
arm_driver/launch/: arm_driver.launch
arm_driver/src/: arm_driver.cpp
armmockup/: CHANGELOG.rst  CMakeLists.txt  package.xml
armmockup_manager/: CHANGELOG.rst  CMakeLists.txt  package.xml
armmockup_manager/config/: armmockup.robot  dxl_init.yaml  ini_pose.yaml
armmockup_manager/launch/: armmockup_manager.launch
armmockup_manager/src/: armmockup_manager.cpp
