<?xml version="1.0"?>
<package format="2">
  <name>arm_driver</name>
  <version>0.1.0</version>
  <description>
    Drive the robotis-op2 arms, following armmockup movement 
  </description>
  <license>Apache 2.0</license>
  <author email="sebastien.mougel@ac-amiens.fr">sm</author>
  <maintainer email="sebastien.mougel@ac-amiens.fr">sm</maintainer>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>cmake_modules</depend>
  <depend>sensor_msgs</depend>
<!--  
  <depend>robotis_controller_msgs</depend>
  <depend>dynamixel_sdk</depend>
  <depend>robotis_framework_common</depend>
  <depend>robotis_device</depend>
  <depend>robotis_controller</depend>
  <depend>robotis_math</depend>
  <depend>op2_kinematics_dynamics</depend>
  <depend>op3_base_module</depend>
  -->
</package>

